Compiler/tests/syntax/good/testfile-bloc-1.rs
fn main() { let a : i32 = 1 + ( 2 ); return; }
