Compiler/tests/syntax/bad/testfile-ident-1.rs
fn main() { let x'x = 42; }
